# cis194

./: .gitignore  README.md  cis194.cabal
src/Week1/: CreditCard.hs  Hanoi.hs
src/Week2/: LogAnalysis.hs
test/: Spec.hs  Week1.hs  Week2.hs
