name:           cis194
version:        0.1.0.0
synopsis:       Homework assignments from cis194 (http://www.seas.upenn.edu/~cis194/)
license:        PublicDomain
license-file:   LICENSE
author:         Raphael Nova <rafa.boanova@gmail.com>
maintainer:     Raphael Nova <rafa.boanova@gmail.com>
build-type:     Simple
cabal-version:  >=1.10

library
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror
  hs-source-dirs:    src
  build-depends:     base >=4.7 && <4.8

test-suite spec
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror
  hs-source-dirs:    src, test
  main-is:           Spec.hs
  type:              exitcode-stdio-1.0
  build-depends:     base       >=4.7 && <4.8,
                     hspec      >=2.1 && <2.2,
                     QuickCheck >=2.7 && <2.8

