name:           cis194
version:        0.1.0.0
synopsis:       Homework assignments from cis194 (http://www.seas.upenn.edu/~cis194/)
license:        PublicDomain
license-file:   LICENSE
author:         Raphael Nova <rafa.boanova@gmail.com>
maintainer:     Raphael Nova <rafa.boanova@gmail.com>
build-type:     Simple
cabal-version:  >=1.10

extra-source-files: README.md

-- Too much pain for nothing in this case (involves IO):
-- data-dir:    data
-- data-files:  Week2/sample.log
--              Week2/error.log

library
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror
  hs-source-dirs:    src
  build-depends:     base

test-suite spec
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror
  hs-source-dirs:    src, test
  main-is:           Spec.hs
  type:              exitcode-stdio-1.0
  build-depends:     base,
                     hspec,
                     QuickCheck

